syntax = "proto3";

package login;

service LoginController {
  rpc login (UserInfo) returns (LoginResult);
}

message UserInfo {
  string username = 1;
  string password = 2;
  uint32 status = 3;
}

message LoginResult {
  bool success = 1;
  string token = 2;
}